<resources>
    <string name="app_name">RockPapperScissors</string>
    <string name="Play_Text">Играть</string>
    <string name="Settings_Text">Настройки</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="Setting">Выберете до скольки побед играть</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="reset">Сбросить</string>
    <string name="YouScore">0</string>
</resources>
